--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "experimental-tsconfig-api",
+  "name": "tsconfig-api",
   "builds": [
     { "src": "./src/**/*.ts", "use": "@now/node@canary" },
     { "src": "./src/tsconfig-data.json", "use": "@now/static" }
