add new routes and extrapolate code

--- a/now.json
+++ b/now.json
@@ -7,6 +7,8 @@
   ],
   "routes": [
     { "src": "/tsconfig", "dest": "/src/tsconfig.ts" },
+    { "src": "/tsconfig/defaults", "dest": "/src/tsconfig-defaults.ts" },
+    { "src": "/tsconfig/keys", "dest": "/src/tsconfig-keys.ts" },
     { "src": "/.*", "dest": "/src/index.ts" }
   ]
 }
