--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     "target": "es6",
     "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "outDir": "build"
   },
   "include": [
-    "src/**/*.ts",
-    "types/tsconfig-api.ts",
+    "src/tsconfig-data.json",
+    "src/**/*.ts"
   ]
 }
