--- a/now.json
+++ b/now.json
@@ -7,6 +7,8 @@
   ],
   "routes": [
     { "src": "/tsconfig", "dest": "/src/tsconfig.ts" },
+    { "src": "/tsconfig/defaults", "dest": "/src/tsconfig-defaults.ts" },
+    { "src": "/tsconfig/options", "dest": "/src/tsconfig-options.ts" },
     { "src": "/.*", "dest": "/src/index.ts" }
   ]
 }
